--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
 {
   "extends": "eslint:recommended",
   "parserOptions": {
+    "sourceType": "module",
     "ecmaVersion": 6,
     "ecmaFeatures": {
       "impliedStrict": true
